responsiveness bugs on iphone

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -19,7 +19,7 @@
 }
 
 .about-section .content img {
-  height: 80px;
+  height: 70px;
   padding: 30px 30px 30px 0;
 }
 
