--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -29,7 +29,7 @@
 #logo {
   position: fixed;
   top: 40px;
-  right: 40px;
+  right: 20px;
   display: none;
 }
 
@@ -49,8 +49,7 @@
     height: 100%;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
-    margin-left: 10px;
+    margin-left: 0px;
   }
 
   .navbar ul li {
@@ -103,5 +102,16 @@
 
   #logo {
     display: inline;
+  }
+}
+
+@media only screen and (min-width: 650px) {
+  #logo {
+    right: 40px;
+  }
+
+  .navbar ul {
+    align-items: flex-start;
+    margin-left: 10px;
   }
 }
