--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -24,7 +24,7 @@
 }
 
 .project-section .content {
-  width: 80%;
+  width: 75%;
   padding: 40px 0 40px 0;
   display: flex;
   flex-wrap: wrap;
